syntax = "proto3";
package routeguide;

// Interface exported by the server.
service ParcelParser {
    rpc SaveData(stream Datastream) returns (msg){}
    rpc GetRecommended(UserInfo) returns (stream Words){}
}

//this input the posts into the parcel server
message Datastream{
    int32 parsePhase = 1;
    int32 identity = 2;
}

message UserInfo{
    int32 identity = 1;
}

//the processed word
message Words{
    int32 word = 1;
}